# textreader

./: .gitignore  Cargo.toml  test.txt
src/: lib.rs
